gccida/c0/check_format_info_main
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2085:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *info, 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2125:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version v41; // [rsp+24h] [rbp-3CCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2126:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version v42; // [rsp+28h] [rbp-3C8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2127:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version v43; // [rsp+30h] [rbp-3C0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2128:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version v44; // [rsp+34h] [rbp-3BCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2129:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version v45; // [rsp+3Ch] [rbp-3B4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2130:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // [rsp+40h] [rbp-3B0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2143:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version std; // [rsp+C8h] [rbp-328h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2148:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version v64; // [rsp+F0h] [rbp-300h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2168:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *last_wanted_type; // [rsp+270h] [rbp-180h] 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2169:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *first_wanted_type; // [rsp+278h] [rbp-178h] 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2170:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 main_wanted_type; // [rsp+280h] [rbp-170h] BYREF 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2171:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 precision_wanted_type; // [rsp+2C0h] [rbp-130h] BYREF 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2172:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 width_wanted_type; // [rsp+300h] [rbp-F0h] BYREF 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2174:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version wanted_type_std; // [rsp+34Ch] [rbp-A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2180:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version length_chars_std; // [rsp+378h] [rbp-78h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2181:1: error: must use 'enum' tag to refer to type 'format_lengths'
format_lengths length_chars_val; // [rsp+37Ch] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2194:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *infoa; // [rsp+3D8h] [rbp-18h] 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/c-format.c:2338:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[*( unsigned __int8 *)format_charsa] & 4) != 0 ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_format_info_main/src/obj/c-format.o] Error 1
